member select hidden for 2nd person fixed some spacing issues

--- a/src/Traisi.Questions/src/travel-diary/components/day-view-scheduler.component.scss
+++ b/src/Traisi.Questions/src/travel-diary/components/day-view-scheduler.component.scss
@@ -50,7 +50,7 @@ mwl-calendar-event-title {
 
 .customt-event-title {
 	.event-title-group {
-		margin-bottom: 30px;
+		margin-bottom: 5px;
 	}
 	i {
 		color: #de4c4c;
